@@ -3,9 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MODx 0.9.5 RC2 (rev 1919 - Nov 5, 2006)
+MODx 0.9.5 RC2 (rev 1920 - Nov 5, 2006)
 ====================================
-* Increased character length of menu title and alias field 255 max (1919)
+* [FS#648] Increased character length of zip and state to 25 max to better accomodate non-US locations (1920)
+* [FS#651] Increased character length of menu title and alias field to 255 max (1919)
 * Modified context menu to use prototype vs. WebFX (1918)
 * Increased character length of page title field to 255 max (1917)
 * Move action button trigger to onclick for better IE7 compatibility (1916)
